--- a/start.html
+++ b/start.html
@@ -351,9 +351,9 @@
     <h2 class="sec__title">Часто <span class="double-txt-w" data-text="задаваемые">задаваемые</span><br> <span class="bg-line-w">вопросы</span></h2>
     <div class="how-it-work__main">
       <div class="how-it-work__accordion">
-        <div class="how-it-work__q" onclick="faqAccordion(this);"><span>Я ни чего не понимаю в сайтах, у меня получится?</span></div>
+        <div class="how-it-work__q" onclick="faqAccordion(this);"><span>Я ничего не понимаю в сайтах, у меня получится?</span></div>
         <div class="how-it-work__txt">
-          <p>Даже не сомневайтесь, у вас все получится! Вам не нужно ни чего знать о сайтах. Мы первая платформа, которая не требует от пользователя ни каких навыков. Ровно 100% того, что требуется для создания сайта будет решено без вашего участия. И все же вам понадобятся следующие навыки:</p>
+          <p>Даже не сомневайтесь, у вас все получится! Вам не нужно ничего знать о сайтах. Мы - первая платформа, которая не требует от пользователя никаких навыков. Ровно 100% того, что требуется для создания сайта, будет решено без вашего участия. И все же вам понадобятся следующее:</p>
           <ul>
             <li>вам нужно установить ссылку на ваш сайт в инстаграм;</li>
             <li>у вас должна быть электронная почта для получения заявок и уведомлений;</li>
@@ -374,30 +374,31 @@
         <div class="how-it-work__txt">
           <p>Наша технология позволяет превращать ваши публикации в страницы вашего сайта, а затем специальным образом мы уведомляем Яндекс и Google о появлении новых страниц для поиска.</p>
           <p>Одновременно с этим, все ваши старые и популярные публикации вновь попадают на первый экран вашего сайта ЛИЧНОГО БРЕНДА.</p>
-          <p>Когда кто-то будет искать в поиске Яндекс или Google информацию, то поисковики предложат посетителю и ваши публикации, в том числе.</p>
+          <p>Когда кто-то будет искать в поиске Яндекс или Google информацию, то поисковики предложат посетителю и ваши публикации в том числе.</p>
           <p>Так все ваши публикации начинают привлекать новых читателей и подписчиков не только среди друзей в Инстаграм, но и среди абсолютно новой аудитории.</p>
+          <p>&nbsp;</p>
         </div>
       </div>
       <div class="how-it-work__accordion">
         <div class="how-it-work__q" onclick="faqAccordion(this);"><span>Почему я должен начать использовать ЛИЧНЫЙ БРЕНД, в чем выгода?</span></div>
         <div class="how-it-work__txt">
-          <p>Выгода в том, что эта страница будет приносить вам дополнительную популярность и доход от вашего бизнеса. Некоторые наши партнеры зарабатывают миллионы благодаря заявкам с сайта, который был создан из социальных сетей. Такой же сайт можете создать вы.</p>
+          <p>Выгода в том, что эта страница будет приносить вам дополнительную популярность и доход от вашего бизнеса. Некоторые наши партнеры зарабатывают миллионы, благодаря заявкам с сайта, который был создан из социальных сетей. Такой же сайт можете создать вы.</p>
         </div>
       </div>
       <div class="how-it-work__accordion">
         <div class="how-it-work__q" onclick="faqAccordion(this);"><span>В ссылке моего аккаунта Инстаграм уже стоит другой сайт, что делать?</span></div>
         <div class="how-it-work__txt">
-          <p>Если вы используете ТапЛинк или любой другой похожий сервис biolinks мы поможем вам создать в нашем конструкторе точно такую же страницу. Более того, вам не придётся платить за неё. Даже если вы решите не создавать Инстаграм портал ЛИЧНОГО БРЕНДА, эта страница будет бесплатной навсегда.</p>
+          <p>Если вы используете ТапЛинк или любой другой похожий сервис biolinks, мы поможем вам создать в нашем конструкторе точно такую же страницу. Более того, вам не придётся платить за неё. Даже, если вы решите не создавать Инстаграм портал ЛИЧНОГО БРЕНДА, эта страница будет бесплатной навсегда.</p>
           <p>Другими словами, вам больше не нужно платить за страницу ссылок ТапЛинк и похожих сервисов.</p>
           <p>Если у вас стоит ссылка на корпоративный сайт, то вы ее сможете продублировать внутри нашей страницы Biolinks.</p>
           <p>Аналогичным образом дублируются ссылки на мессенджеры внутри страницы Biolinks.</p>
         </div>
       </div>
       <div class="how-it-work__accordion">
-        <div class="how-it-work__q" onclick="faqAccordion(this);"><span>Может ли сайт из Инстаграм повлиять на блокировку ли теневой бан аккаунта?</span></div>
+        <div class="how-it-work__q" onclick="faqAccordion(this);"><span>Может ли сайт из Инстаграм повлиять на блокировку или теневой бан аккаунта?</span></div>
         <div class="how-it-work__txt">
           <p>Однозначный ответ НЕТ! При создании сайта из ваших публикаций в Инстаграм, мы не запрашиваем у вас пароль для доступа в ваш аккаунт.</p>
-          <p>Ваши публикации находятся в открытом доступе. Так же как ваш сайт может посещать сервер Яндекс, Гугл, так же и наш сервис изучает ваш контент.</p>
+          <p>Ваши публикации находятся в открытом доступе. Так же, как ваш сайт может посещать сервер Яндекс, Google, так же и наш сервис изучает ваш контент.</p>
         </div>
       </div>
       <div class="how-it-work__accordion">
@@ -415,7 +416,7 @@
       <div class="how-it-work__accordion">
         <div class="how-it-work__q" onclick="faqAccordion(this);"><span>Как удалить сайт ЛИЧНОГО БРЕНДА навсегда?</span></div>
         <div class="how-it-work__txt">
-          <p>Вам нужно убрать ссылку на ваш сайт из вашего Инстаграм. В течении нескольких часов ( до 72 часа) ваш сайт будет снят с публикации и весь контент в нем будет уничтожен. Вы потеряете все результаты поискового продвижения в течении следующих 14 дней. По этой причине не рекомендуется пропускать платежи за пользование сервисом ЛИЧНЫЙ САЙТ из Инстаграм.</p>
+          <p>Вам нужно убрать ссылку на ваш сайт из вашего Инстаграм. В течении нескольких часов (до 72 часов) ваш сайт будет снят с публикации и весь контент в нем будет уничтожен. Вы потеряете все результаты поискового продвижения в течении следующих 14 дней. По этой причине не рекомендуется пропускать платежи за пользование сервисом ЛИЧНЫЙ САЙТ из Инстаграм.</p>
         </div>
       </div>
       <div class="how-it-work__accordion">
@@ -425,15 +426,15 @@
         </div>
       </div>
       <div class="how-it-work__accordion">
-        <div class="how-it-work__q" onclick="faqAccordion(this);"><span>Когда мой сайт личного бренда выйдет в ТОП Яндекса и Google?</span></div>
+        <div class="how-it-work__q" onclick="faqAccordion(this);"><span>Когда мой сайт личного бренда выйдет в ТОП Яндекс и Google?</span></div>
         <div class="how-it-work__txt">
-          <p>Сервис ЛИЧНЫЙ БРЕНД не может влиять на скорость выхода в ТОП вашего сайта. Мы предоставляем вам идеальную ( с точки зрения продвижения) автоматизированную систему управления сайтом. Но результаты ранжирования зависят целиком и полностью только от вашего контента. Чем больше пользы вы даёте читателям, тем быстрее происходит поисковое продвижение. О том, как двигаться в ТОП узнавайте на наших бесплатных марафонах по продвижению ЛИЧНОГО БРЕНДА. Подпишитесь на наш Инстаграм по этой ссылке: <a href="https://instagram.com/lichnyjbrend" target="_blank">https://instagram.com/lichnyjbrend</a></p>
+          <p>Сервис ЛИЧНЫЙ БРЕНД не может влиять на скорость выхода в ТОП вашего сайта. Мы предоставляем вам идеальную (с точки зрения продвижения) автоматизированную систему управления сайтом. Но результаты ранжирования зависят целиком и полностью только от вашего контента. Чем больше пользы вы даёте читателям, тем быстрее происходит поисковое продвижение. О том, как двигаться в ТОП, узнавайте на наших бесплатных марафонах по продвижению ЛИЧНОГО БРЕНДА. Подпишитесь на наш Инстаграм по этой ссылке: <a href="https://instagram.com/lichnyjbrend" target="_blank">https://instagram.com/lichnyjbrend</a></p>
         </div>
       </div>
       <div class="how-it-work__accordion">
         <div class="how-it-work__q" onclick="faqAccordion(this);"><span>Можно ли использовать сайт личного бренда для рекламы?</span></div>
         <div class="how-it-work__txt">
-          <p>В большинстве случаев наивысшую конверсию из рекламы получают на посадочных страницах или лендингах. На вашем сайте ЛИЧНОГО БРЕНДА есть такой лендинг. Это страница biolinks . Вы можете его настроить при помощи конструктора.</p>
+          <p>В большинстве случаев наивысшую конверсию из рекламы получают на посадочных страницах или лендингах. На вашем сайте ЛИЧНОГО БРЕНДА есть такой лендинг. Это страница biolinks. Вы можете его настроить при помощи конструктора.</p>
           <p>В частном случае допускается интеграция с профессиональным лендингом от сторонней вэб студии. В большинстве случаев разовая оплата за подключение составляет не более 5000 рублей.</p>
         </div>
       </div>
@@ -446,7 +447,7 @@
       <div class="how-it-work__accordion">
         <div class="how-it-work__q" onclick="faqAccordion(this);"><span>Можно ли привязать свой домен?</span></div>
         <div class="how-it-work__txt">
-          <p>Все пользователи платного тарифа могут использовать свой личный домен. Техподдержка ЛИЧНОГО БРЕНДА сама привяжет ваш домен, при условии его покупке на новый аккаунт в <a href="https://www.reg.ru/" target="_blank">REG.RU</a>. Средняя стоимость домена- 200 рублей в год, оплачивается в пользу <a href="https://www.reg.ru/" target="_blank">REG.RU</a></p>
+          <p>Все пользователи платного тарифа могут использовать свой личный домен. Техподдержка ЛИЧНОГО БРЕНДА сама привяжет ваш домен, при условии его покупке на новый аккаунт в <a href="https://www.reg.ru/" target="_blank">REG.RU</a>. Средняя стоимость домена - 200 рублей в год, оплачивается в пользу <a href="https://www.reg.ru/" target="_blank">REG.RU</a>.</p>
         </div>
       </div>
       <div class="how-it-work__accordion">
@@ -460,25 +461,57 @@
         <div class="how-it-work__q" onclick="faqAccordion(this);"><span>В чем разница между платным и бесплатным тарифом?</span></div>
         <div class="how-it-work__txt">
           <p>Полная сравнительная таблица доступна на вкладке Тарифы.</p>
-          <p>Если говорить коротко то разница в том, что на бесплатном тарифе ваш сайт ЛИЧНОГО БРЕНДА всегда будет состоять только из 18 постов, которые создаются при первой синхронизации. (Вы можете удалить аккаунт, изменить посты и снова создать свой сайт, чтобы изменить его).</p>
-          <p>На платном тарифе вы получаете портал, в котором каждой публикации соответсвует отдельная страница. Также в платном аккаунте доступно подключение личного домена и регулярная автоматическая синхронизация с Инстаграм, а также десятки других возможностей.</p>
+          <p>Если говорить коротко, то разница в том, что на бесплатном тарифе ваш сайт ЛИЧНОГО БРЕНДА всегда будет состоять только из 18 постов, которые создаются при первой синхронизации. (Вы можете удалить аккаунт, изменить посты и снова создать свой сайт, чтобы изменить его).</p>
+          <p>На платном тарифе вы получаете портал, в котором каждой публикации соответсвует отдельная страница. Также в платном аккаунте доступно подключение личного домена и регулярная автоматическая синхронизация с Instagram, а также десятки других возможностей.</p>
           <p>В конечном итоге, разница между платным и бесплатным тарифом в количестве обращений через ваш сайт.</p>
           <p>Страница biolinks и конструктор ссылок бесплатно доступен на обоих тарифах без каких либо ограничений.</p>
           <p>&nbsp;</p>
         </div>
       </div>
       <div class="how-it-work__accordion">
-        <div class="how-it-work__q" onclick="faqAccordion(this);"><span>С чего начать?</span></div>
+        <div class="how-it-work__q" onclick="faqAccordion(this);"><span>Есть ли партнерская программа у Личного бренда?</span></div>
         <div class="how-it-work__txt">
-          <p>Выберите подходящую тему на этой странице и оставьте заявку. С вами свяжется наш менеджер техподдержки, проведёт аудит вашего Инстаграм , поможет настроить страницу biolinks. Вы начнёте использование бесплатного тарифа и в любой момент сможете перейти к платному продвижению. Обязательно подпишитесь на наш аккаунт: <a href="https://instagram.com/lichnyjbrend" target="_blank">https://instagram.com/lichnyjbrend</a>, чтобы получить нашу техподдержку.</p>
+          <p>Да! Размер реферального вознаграждения зависит от того, каким тарифом вы пользуетесь.</p>
+          <p>Если у вас бесплатный тариф, но вы рекламируете наш сервис, то ваше вознаграждение составляет 480 рублей за привлечение в оплату нового партнера.</p>
+          <p>Если у вас платный тариф, но вы рекламируете наш сервис, то ваше вознаграждение составляет 960 рублей за привлечение в оплату нового партнера.</p>
+          <p>Ссылка на ваш реферальный лендинг находится внизу вашей страницы biolinks.</p>
+          <p>После появления первого платящего клиента, вам будет передана ссылка на ваш партнёрский кабинет.</p>
         </div>
       </div>
       <div class="how-it-work__accordion">
-        <div class="how-it-work__q" onclick="faqAccordion(this);"><span>В заключении.</span></div>
+        <div class="how-it-work__q" onclick="faqAccordion(this);"><span>Что делает архитектор инстаграм порталов?</span></div>
+        <div class="how-it-work__txt">
+          <p>Дополнительным источником заработка для smm специалистов может быть подключение их партнёров к платформе ЛИЧНЫЙ БРЕНД. Специалиста, который создаёт сайт бренда для своих клиентов, мы называем АРХИТЕКТОР ИНСТАГРАМ ПОРТАЛОВ.</p>
+          <p>Работа архитектора заключается в следующем:</p>
+          <ul>
+            <li>создание сайта из аккаунта партнера;</li>
+            <li>подбор заголовка;</li>
+            <li>написание постов и прочее.</li>
+          </ul>
+          <p>Как правило, такая работа оплачивается на ежемесячной основе, от 5000 рублей в месяц.</p>
+          <p>Некоторые наши партнеры поддерживают и зарабатывают на десятках аккаунтов.</p>
+          <p>Узнать больше вы сможете на наших бесплатных марафонах. Подписывайтесь: <a href="https://instagram.com/lichnyjbrend" target="_blank">instagram.com/lichnyjbrend</a></p>
+        </div>
+      </div>
+      <div class="how-it-work__accordion">
+        <div class="how-it-work__q" onclick="faqAccordion(this);"><span>У вас есть инструкция?</span></div>
+        <div class="how-it-work__txt">
+          <p>У ЛИЧНОГО БРЕНДА есть инструкция. Вы можете открыть ее по этой <a href="https://yadi.sk/i/L3W8Z3pkaLmT8A" target="_blank">ссылке</a>.</p>
+        </div>
+      </div>
+      <div class="how-it-work__accordion">
+        <div class="how-it-work__q" onclick="faqAccordion(this);"><span>С чего начать?</span></div>
+        <div class="how-it-work__txt">
+          <p>Выберите подходящую тему на этой странице и оставьте заявку. С вами свяжется наш менеджер техподдержки, проведёт аудит вашего Инстаграм, поможет настроить страницу biolinks. Вы начнёте использование бесплатного тарифа и в любой момент сможете перейти к платному продвижению. Обязательно подпишитесь на наш аккаунт: <a href="https://instagram.com/lichnyjbrend" target="_blank">https://instagram.com/lichnyjbrend</a>, чтобы получить нашу техподдержку.</p>
+        </div>
+      </div>
+      <div class="how-it-work__accordion">
+        <div class="how-it-work__q" onclick="faqAccordion(this);"><span>В заключение.</span></div>
         <div class="how-it-work__txt">
           <p>Выбирая продвижение своего личного бренда при помощи нашей платформы, вы обретаете надежного друга и партнера, с которым вам по пути. Мы не делаем работу за вас, но делаем вашу работу легче и приятнее.</p>
           <p>Спасибо за обращение!</p>
           <p style="text-align: right;"><b>С уважением к вам и вашему делу, <br>Роман Большиянов, основатель платформы ЛИЧНЫЙ БРЕНД.</b></p>
+          <p>Презентация (2 минуты): <a href="https://youtu.be/VRRcOiDpq8g" target="_blank">YouTube</a></p>
         </div>
       </div>
     </div>
