--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>ЛИЧНЫЙ БРЕНД: СОЗДАЙ СЕБЯ САМ</title>
 
-    <meta name="robots" content="noindex" />
     <meta http-equiv="x-ua-compatible" content="ie=edge,chrome=1"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <script async src="https://use.fontawesome.com/d758daec41.js"></script>   
@@ -17,6 +16,8 @@
 На тарифе за 200 рублей в месяц вы сможете создавать настоящий портал из своего Инстаграм и получать максимум для продвижения своего ЛИЧНОГО БРЕНДА.<br/>
 ПРЯМО СЕЙЧАС НАЖМИТЕ ПОПРОБОВАТЬ И ПОЛУЧИТЕ СВОЙ БЕСПЛАТНЫЙ САЙТ ЛИЧНОГО БРЕНДА ЧЕРЕЗ ПЯТЬ МИНУТ">
     <meta name="keywords" content="личный бренд брендинг маркетолог пер сональный пример нетворкинг сайт виджет" />
+	<meta name="google-site-verification" content="Tc80rkeGlxPC3_0qxPVR6WMoHvuJbJhZenUpRwRs2UQ" />
+	<meta name="yandex-verification" content="46a02c8a176c60cf" />
     
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
@@ -164,10 +165,10 @@
 		<div class="items" id="js-items">
 			<div class="container">
 				<div class="items-bar">
-					<button class="btn items-bar__btn active" id="js-grid"><i class="fa fa-th" aria-hidden="true"></i>Плитка</button>
-					<button class="btn items-bar__btn" id="js-rows"><i class="fa fa-bars" aria-hidden="true"></i>Лента</button>
+					<button class="btn items-bar__btn" id="js-grid"><i class="fa fa-th" aria-hidden="true"></i>Плитка</button>
+					<button class="btn items-bar__btn active" id="js-rows"><i class="fa fa-bars" aria-hidden="true"></i>Лента</button>
 				</div>
-				<div class="items-main" id="js-items-main">
+				<div class="items-main row" id="js-items-main">
 					<div class="items-item">
 						<a href="./posts/./voprosy-i-otvety---lichnyy.html" class="items-item__wrap">
 							<div class="items-item__pic">
