--- a/mlm/arhitektura_zhizni.html
+++ b/mlm/arhitektura_zhizni.html
@@ -9,7 +9,7 @@
     <script async src="https://use.fontawesome.com/d758daec41.js"></script>   
 	<link rel="stylesheet" href="../css/style.css"/>
     
-    <meta name="description" content="🔹Пишу книгу «Архитектура Жизни»
+    <meta name="description" content="🔹Эксперт | Практик
 🔹Автор пр-та ,Архитектура-Жизни’
 🔹Помогаю раскопать ваши деньги
 🔹Обучение мирового уровня
@@ -43,7 +43,7 @@
     <meta property="og:image:width" content="150"/>
     <meta property="og:image:height" content="150"/>
     <meta property="og:title" content="MLM Архитектура Жизни|Юлия Светлая" />
-    <meta property="og:description" content="🔹Пишу книгу «Архитектура Жизни»
+    <meta property="og:description" content="🔹Эксперт | Практик
 🔹Автор пр-та ,Архитектура-Жизни’
 🔹Помогаю раскопать ваши деньги
 🔹Обучение мирового уровня
