--- a/links.html
+++ b/links.html
@@ -180,7 +180,7 @@
 
 
 
-						<a href="https://lichnyj-brend.ru/start" class="links-page-btn shake " style="
+						<a href="https://lichnyj-brend.ru" class="links-page-btn shake " style="
 " 
 						target="_blank"
 >
