--- a/settings.html
+++ b/settings.html
@@ -31,7 +31,7 @@
     <!--Open Graph-->
     <link rel="image_src" href="https://lichnyj-brend.ru/img/og/og.jpg"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:url" content="https://lichnyj-brend.ru/start.html"/>
+    <meta property="og:url" content="https://lichnyj-brend.ru"/>
     <meta property="og:image" content="https://lichnyj-brend.ru/img/og/og.jpg"/>
     <meta property="og:image:type" content="image/jpeg"/>
     <meta property="og:image:width" content="1024"/>
