--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="Ru-ru">
   <head>
     <meta charset="UTF-8"/>
-    <title>СОЗДАЙ СЕБЯ САМ</title>
+    <title>Личный бренд</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <!--Favicons генератор https://www.favicon-generator.org/-->
