--- a/start.html
+++ b/start.html
@@ -25,7 +25,7 @@ var getUrlParameter = function getUrlParameter(sParam) {
 var link = "https://lichnyj-brend.ru";
 var ref = getUrlParameter('ref');
 if (ref) {
-    link = link + "&ref=" + ref;
+    link = link + "?ref=" + ref;
 }
 
 window.location.replace(link);
