--- a/thanks.html
+++ b/thanks.html
@@ -220,7 +220,7 @@
           <div class="footer__wrap"><a class="logo" href="/">ЛИЧНЫЙ БРЕНД</a>
             <nav class="menu">
               <ul>
-                <li><a href="main">Блог</a></li>
+                <li><a href="blog.html">Блог</a></li>
                 <li>
                   <button class="btn js-tarrifs-btn" onclick="document.getElementById('js-popup').classList.toggle('open');">Тарифы</button>
                 </li>
