--- a/start.html
+++ b/start.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Refresh" content="7; url=//lichnyj-brend.ru/" />
   </head>
   <body>
-    <p>Пожалуйста, перейдите <a href="//lichnyj-brend.ru/">по этой ссылке</a>.</p>
+    <p>Please follow <a href="//lichnyj-brend.ru/">this link</a>.</p>
 
     <script type="text/javascript">
 var getUrlParameter = function getUrlParameter(sParam) {
