--- a/index.html
+++ b/index.html
@@ -546,6 +546,7 @@
               <li class="excluded"><span>&#65794;</span> Аналитика</li>
               <li class="excluded"><span>&#65794;</span> Свои скрипты</li>
               <li class="excluded"><span>&#65794;</span> Собственный домен</li>
+              <li class="excluded"><span>&#65794;</span> Landing page</li>
             </ul>
           </div>
         </div>
@@ -570,6 +571,7 @@
               <li><span>&#10003;</span> Аналитика</li>
               <li class="excluded"><span>&#65794;</span> Свои скрипты</li>
               <li><span>&#10003;</span> Собственный домен</li>
+              <li class="excluded"><span>&#65794;</span> Landing page</li>
             </ul>
           </div>
         </div>
@@ -594,6 +596,7 @@
               <li><span>&#10003;</span> Аналитика</li>
               <li><span>&#10003;</span> Свои скрипты</li>
               <li><span>&#10003;</span> Собственный домен</li>
+              <li><span>&#10003;</span> Landing page</li>
             </ul>
           </div>
         </div>
@@ -618,6 +621,7 @@
               <li><span>&#10003;</span> Аналитика</li>
               <li><span>&#10003;</span> Свои скрипты</li>
               <li><span>&#10003;</span> Собственный домен</li>
+              <li><span>&#10003;</span> Landing page</li>
             </ul>
           </div>
         </div>        
