--- a/thanks.html
+++ b/thanks.html
@@ -128,12 +128,14 @@
               <li><span>&#10003;</span> <b>Рефералка 480₽</b></li>
               <li class="excluded"><span>&#65794;</span> Лид форма</li>
               <li class="excluded"><span>&#65794;</span> Денежный перевод</li>
-              <li class="excluded"><span>&#65794;</span> Поисковое продвидение</li>
+              <li class="excluded"><span>&#65794;</span>&nbsp;Поисковое&nbsp;продвижение</li>
               <li class="excluded"><span>&#65794;</span> Аналитика</li>
               <li class="excluded"><span>&#65794;</span> Свои скрипты</li>
               <li class="excluded"><span>&#65794;</span> Собственный домен</li>
+              <li class="excluded"><span>&#65794;</span> Landing page</li>
             </ul>
           </div>
+          <a href="settings.html" class="btn btn_red sec__footer-btn"><span>Попробовать</span></a>
         </div>
         <div class="popup__col">
           <div class="popup__col-header">
@@ -152,12 +154,14 @@
               <li><span>&#10003;</span> <b>Рефералка 960₽</b></li>
               <li><span>&#10003;</span> Лид форма</li>
               <li class="excluded"><span>&#65794;</span> Денежный перевод</li>
-              <li><span>&#10003;</span> <b>Поисковое продвижение</b></li>
+              <li><span>&#10003;</span>&nbsp;<b>Поисковое&nbsp;продвижение</b></li>
               <li><span>&#10003;</span> Аналитика</li>
               <li class="excluded"><span>&#65794;</span> Свои скрипты</li>
               <li><span>&#10003;</span> Собственный домен</li>
+              <li class="excluded"><span>&#65794;</span> Landing page</li>
             </ul>
           </div>
+          <a onclick="window.open('https://money.yandex.ru/quickpay/shop-widget?writer=seller&targets=Тариф Bloger&targets-hint=&default-sum=2400&button-text=12&payment-type-choice=on&mail=on&comment=on&hint=Укажите ваш Instagram аккаунт&label=lichnyj-brend.ru&quickpay=shop&account=410015237072018');showSettings();" class="btn btn_red sec__footer-btn"><span>Оплатить</span></a>
         </div>
         <div class="popup__col">
           <div class="popup__col-header">
@@ -176,12 +180,14 @@
               <li><span>&#10003;</span> <b>MLM выплаты 40%</b></li>
               <li><span>&#10003;</span> Лид форма</li>
               <li><span>&#10003;</span> Денежный перевод</li>
-              <li><span>&#10003;</span> <b>Поисковое продвижение</b></li>
+              <li><span>&#10003;</span>&nbsp;<b>Поисковое&nbsp;продвижение</b></li>
               <li><span>&#10003;</span> Аналитика</li>
               <li><span>&#10003;</span> Свои скрипты</li>
               <li><span>&#10003;</span> Собственный домен</li>
+              <li><span>&#10003;</span> Landing page</li>
             </ul>
           </div>
+          <a onclick="window.open('https://money.yandex.ru/quickpay/shop-widget?writer=seller&targets=Тариф Business&targets-hint=&default-sum=3600&button-text=12&payment-type-choice=on&mail=on&comment=on&hint=Укажите ваш Instagram аккаунт&label=lichnyj-brend.ru&quickpay=shop&account=410015237072018');showSettings();" class="btn btn_red sec__footer-btn"><span>Оплатить</span></a>
         </div>
         <div class="popup__col">
           <div class="popup__col-header">
@@ -197,15 +203,17 @@
               <li><span>&#10003;</span> ∞ Слайдеры</li>
               <li><span>&#10003;</span> Выбор темы</li>
               <li><span>&#10003;</span> Раскрывающийся текст</li>
-              <li class="excluded"><span>&#65794;</span> <b>Реферальных выплат нет</b></li>
+              <li class="excluded"><span>&#65794;</span>&nbsp;Реферальных&nbsp;выплат&nbsp;нет</li>
               <li><span>&#10003;</span> Лид форма</li>
               <li><span>&#10003;</span> Денежный перевод</li>
-              <li><span>&#10003;</span> <b>Поисковое продвижение</b></li>
+              <li><span>&#10003;</span>&nbsp;<b>Поисковое&nbsp;продвижение</b></li>
               <li><span>&#10003;</span> Аналитика</li>
               <li><span>&#10003;</span> Свои скрипты</li>
               <li><span>&#10003;</span> Собственный домен</li>
+              <li><span>&#10003;</span> Landing page</li>
             </ul>
           </div>
+          <a href="blog.html" class="btn btn_red sec__footer-btn"><span>Связаться</span></a>
         </div>        
 
 
