--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
               <li><span>&#10003;</span> Landing page</li>
             </ul>
           </div>
-          <a href="blog.html" class="btn btn_red sec__footer-btn"><span>Связаться</span></a>
+          <a href="links.html" class="btn btn_red sec__footer-btn"><span>Связаться</span></a>
         </div>        
 
 
