Fix process timer

--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@ $(document).ready(function(){
                 contentType: 'application/json',
 		data : form_data
 	}).done(function(response){
-		var redirect = "http://lichnyj-brend.ru/settings?username=" + username;
+		var redirect = "https://lichnyj-brend.ru/settings?username=" + username;
                 if (ref) {
 			redirect = redirect + "&ref=" + ref;
                 }
