--- a/settings.html
+++ b/settings.html
@@ -411,7 +411,7 @@ $(document).ready(function(){
                 contentType: 'application/json',
 		data : form_data
 	}).done(function(response){
-		var redirect = "http://lichnyj-brend.ru/thanks?username=" + username;
+		var redirect = "https://lichnyj-brend.ru/thanks?username=" + username;
                 if (ref) {
 			redirect = redirect + "&ref=" + ref;
                 }
