--- a/process.html
+++ b/process.html
@@ -286,7 +286,7 @@ $(document).ready(function(){
             error: function( data ) {
                 clearInterval(tid);
 
-                $(".thanks__title").text("Страницы не существует");
+                $(".thanks__title").text("cтраницы не существует");
                 $(".thanks__txt").hide();
                 $("#js-log").hide();
 
