--- a/settings.html
+++ b/settings.html
@@ -136,15 +136,15 @@
           </label>
           <label class="settings__form-label">
             <span class="settings__form-title">Ваш WhatsApp (опционально)</span>
-            <input class="input settings__form-input" type="tel" name="whatsapp" >
+            <input class="input settings__form-input" type="tel" name="whatsapp" placeholder="mobile">
           </label>
           <label class="settings__form-label">
             <span class="settings__form-title">Ваш Viber (опционально)</span>
-            <input class="input settings__form-input" type="tel" name="viber" >
+            <input class="input settings__form-input" type="tel" name="viber" placeholder="mobile">
           </label>
           <label class="settings__form-label">
             <span class="settings__form-title">Ваш Telegram (опционально)</span>
-            <input class="input settings__form-input" type="text" name="telegram" >
+            <input class="input settings__form-input" type="text" name="telegram" placeholder="username">
           </label>
           <button id="confirm_btn" class="btn settings__form-submit" type="submit">Подтвердить</button>
           
